# ChangeLog for x11-libs/cairo
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.413 2015/04/13 08:24:29 ago Exp $

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cairo-1.12.18-r1.ebuild:
  Stable for alpha, wrt bug #540676

  31 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cairo-1.12.18-r1.ebuild:
  Stable for ppc64, wrt bug #540676

*cairo-1.14.2 (25 Mar 2015)

  25 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  -cairo-1.14.0-r1.ebuild, +cairo-1.14.2.ebuild, cairo-9999.ebuild:
  Version bump, various bugs fixed. Update live ebuild to git-r3.eclass.
  Propagate live ebuild flag changes (experimental/broken flags now
  completely removed from the ebuild). Drop old.

  05 Mar 2015; Jeroen Roovers <jer@gentoo.org> cairo-1.12.18-r1.ebuild:
  Stable for HPPA (bug #540676).

*cairo-1.14.0-r2 (05 Mar 2015)

  05 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  +cairo-1.14.0-r2.ebuild, +files/cairo-1.14.0-CFF-unaligned-access.patch,
  +files/cairo-1.14.0-image-negative-span-length.patch,
  +files/cairo-1.14.0-tor-scan-converter-do_fullrow-intersection.patch,
  +files/cairo-1.14.0-xcb-0-sized-glyph.patch,
  +files/cairo-1.14.0-xlib-0-sized-glyph.patch:
  Add upstream patches to fix several crashes. Should fix bug #541326 (heap
  corruption in darktable and evince), thanks to sergeev917 and Andrey Volkov.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cairo-1.12.18-r1.ebuild:
  Stable for ppc, wrt bug #540676

  28 Feb 2015; Markus Meier <maekke@gentoo.org> cairo-1.12.18-r1.ebuild:
  arm stable, bug #540676

  28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> cairo-1.12.18-r1.ebuild:
  Stable for ia64, wrt bug #540676

  27 Feb 2015; Agostino Sarubbo <ago@gentoo.org> cairo-1.12.18-r1.ebuild:
  Stable for sparc, wrt bug #540676

  25 Feb 2015; Agostino Sarubbo <ago@gentoo.org> cairo-1.12.18-r1.ebuild:
  Stable for x86, wrt bug #540676
