@@ -24,29 +24,29 @@ DIST cairo-1.12.16.tar.xz 35889824 SHA256 2505959eb3f1de3e1841023b61585bfd35684b
 DIST cairo-1.12.18.tar.xz 38276736 SHA256 dc59f0b7ac945ce4e138a03c227a29260915a8b05a4226c1f6f1be586ba7f5b6 SHA512 238b426ee010a0b0a8d55e61043f95a87438f73f900b3b293dea61b8e7ff3cc84e0aa0b779b2a1d43d2d153490bd053cbbc9ec69ceb9b3f482797638260fbef2 WHIRLPOOL e4408a3f6185f1d7e0f1c95f4beb266c48722ba075329621c1a6a6f2ad3114c334ceb6b242d661d7d3e7e7a3b3fcd013c5806c17b637bfa7a59895cc70fc66cf
 DIST cairo-1.14.0.tar.xz 36584076 SHA256 2cf5f81432e77ea4359af9dcd0f4faf37d015934501391c311bfd2d19a0134b7 SHA512 46900fac809763d610062d92fad6a65440d63f957907ebccc82cd90222bb8fea9782293b7825bdf9d86c396dd7f3879043a4c69dd80b519efa5488357c34ab58 WHIRLPOOL 8ac5e8be6f56f1636529ac61506db123ee343b051d99463b1644abf56b5e7eeb16197eab08c6d29faf4d99c8c0ba7d43902def99e33af1e20882bf44c5825309
 DIST cairo-1.14.2.tar.xz 35376404 SHA256 c919d999ddb1bbbecd4bbe65299ca2abd2079c7e13d224577895afa7005ecceb SHA512 74d30f3f879f097b2c3408ef9698da8f337301f971c3eba7f336d02d6b2812d2ca0bd8bbc0cc7ee11127d3574910b1b77fde3b065cfd504436b62e17c2acb200 WHIRLPOOL fd57e1f474280a1df7a641bdcbe4dc5e5a71bd53b9e46e54302c7858e3bc0081fd1145f19133152819d259611096e4cca034c9caa73a748a507de9094f81a519
-EBUILD cairo-1.10.2-r3.ebuild 4382 SHA256 1656fb57c943b71b588ca8427320067fdf91ae83331e8c4dead61a2461c83c18 SHA512 8392faa29b007706de4c2b6d61e3507bfcbccc07689239c7eb98e8b19547d4c656b18f507188e1d150a63f18782d864ecd4c5d70abff7c22033a4be5e775d9bf WHIRLPOOL 515c656ea979ed756b38f42db19b839f679c52a9f349a84430aaf31467634f66355d8a2d41a578d39e2ea6179c4baec94b73eefdba5905b8c291269070a00fb7
+EBUILD cairo-1.10.2-r3.ebuild 4396 SHA256 4c2ad955416048ddc9669ebf53cd9ab0eca6481635a25b318303b0aeebb69ac1 SHA512 657ed68806ee46c4f0a8f7da4e039fdd118979f849f759d1bb7581d2a666b2fe320a2654d4d5c94a390719f4cfd09de07d20f726b14f104a6bfe7abf3bb56027 WHIRLPOOL 1dae018751a74e283cff4389b119bac5e50caa45d470db82b1b7e4578a60c98bc0fa8b557f7b21492313fbf3be7c96dd045f482824cca9752b76e7cb4cc7c4f8
 EBUILD cairo-1.12.16-r4.ebuild 5967 SHA256 5e0b558e4eb8d89d6b05e76762874c3747ab82e63e6e3258de908bef1836e5f4 SHA512 70870aac91452f40c1cbb380d3b2d5ff228d563d11882b12498a3a95482a06639d232e6a6ceac2326ffb8139a87f3a8a9feeeeab17bf678346c9ded06eaa6418 WHIRLPOOL 2c564483c6ba1a1cfe4c193f8c863078a45035c7c1581d4f8d43cf68a0b04ad9c4c45740299e0ad6b36f9074662942fabf9566d7e1ae08258790841fe6e0f074
 EBUILD cairo-1.12.16.ebuild 4115 SHA256 510a7314d31ee86b1cdc198cc2feae538b577582961b38c1bcab35e8e8da1a17 SHA512 a7964920b7dc9b8fcd3826207fa53046e41d67d3486a73f32cd4183ebf2d9ac500398a0d73604c9d234139344653d66ad8b24eb91e1d48d814c1fa70ba179c29 WHIRLPOOL 1df6b4bae51c564a862e763b0ffb6726ce9ab983bf7fe353e7bfb8f34d32cdd56a2c889efc55d70174061a0b3d8744ef9abb282870e6bae4d119b9331841a40d
 EBUILD cairo-1.12.18-r1.ebuild 5298 SHA256 6ab8f3e283281026fa847c91ae4002b217d45099055f023438d744e854baa17b SHA512 ea0c29ae0b0ca6c8422faa1487f6f8dcf71eb18d9660e014bd898490a7368b914e02a551b1821b14154f3d6a2215c07bb16e347b8e4060ef63191e1f42303766 WHIRLPOOL 8c4d552d6168383557378dcdc0c9f06624ef99290bd83b1cc108dc6c4f4643c91871cd3c6a4954a074b902c2ae8d38ab6693f5dabe77bab9a73dd14bbbc3ead3
 EBUILD cairo-1.14.0-r2.ebuild 5755 SHA256 80bf88134e12057ac73c8750b7184053087367345b9484d1fc9914821b458a9d SHA512 7a1f5f7e783e924a3e1b3f7940cdb6602061de8ba76947fd04fabd4df661d541cf31c51d23c1eb22390e9ba7c0bf1ef3b73dfcbb2d145773f69f31993819921c WHIRLPOOL 60d4fe86c1cf6073db11217b8158e138a2a142084b51f3d143865b813713e0ebe3981a3fc27709a16e2a22c2c2eb5ef73676e04111633592b7a736ee1c1e0139
 EBUILD cairo-1.14.2.ebuild 4777 SHA256 475bf264794fdd96117c4b96d1769616d364823e206754fbc19692804929eb32 SHA512 1323bb9161e36d478d32b1672912d674ee910a4bca66ee8dd008ee88544e6418c5d8561bf1eaa99a1a8bf0f91927f2e9739b6e589f7f15279386d6b5f476f3af WHIRLPOOL 3c54042278077634608207ad059c35593f99d9910ef625568cff85bdd976952e9e0185fa9c82d47e46f88b235683c6f9e7cb8b37840e565ea38581d875189e25
 EBUILD cairo-9999.ebuild 4776 SHA256 64f0c155392d97a1b210b6e4fa12cf0641b24ab06bd8765dd002d7380873c8d1 SHA512 57f62cbf149451256eed3517163e59f4e6c953a462cc97b68a649a3bd1e6dd0d91b48307941604aee246670cef89a753b63677d83aa2cb6fa05548e27b3fd4dd WHIRLPOOL 26a1063f16c147530440290e50d1526428714baf1e4d0d79eeb76620f22ab167436b3b5c4845f37afc613a5b36585b2240619607dffa317d9b1d1cacaa4388f3
-MISC ChangeLog 62563 SHA256 7778332d95da186350a1c39cdd58f5eeafde15c565c2bf550bf3de0146d596d4 SHA512 eecbe62e7f339d6bde26827f03559963478c9243a32322c252d0f4495efda830c1159a1eb48d5f2c689f89bb26787dfc9854401a7b5b98aa4c0fb94f626a1ccc WHIRLPOOL 3552948b1f86a419107470a52675d6a4b0018a212803cb0a7d6f76e2da0b619674d4c7e6cffd9054a302be7dd96c086a737eb58365b7458cc212c4b630065079
+MISC ChangeLog 62757 SHA256 09456666d1e95c7c4e66554f100eccf966b37ee88747f0f2b9590649491a048d SHA512 fe49a0446b0ff0693155b495d042ef4986d05672402822fa75e947d62af4b6d0dc910ce0b78c34ae5e98986cb024eb72d0ae415b3110b3392bc9559a09a57f1e WHIRLPOOL a1342300e14509d97a886a2376321001fea89da6930ee2d5d7afd4a436f3b99db1a3ff0d028c3064e6d2dc8eb1d05d3f377aaa3e859e0da083429719815e88fd
 MISC metadata.xml 1294 SHA256 988ed8eceb7738628f10a041a322482997d26a5fed1fd42eb86bd742a6e3602c SHA512 7d333210abf19ed97a1210d37d77a1cbe944220f16757a0c652c1a329d00cc387ebf2ca174db6dc7f79a892ab068c66d773c364da0321fcfeec0a05d84946bcf WHIRLPOOL b0d67117667918643b4d889b74207b995d8fa1c851786fc89bb81cecc5c46e89714533eb2f8cd005e1175ac8c79eb5d3912826e87cf1c34886103b5a4d7e06a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVK309AAoJELp701BxlEWfKtwQAL3OZoMpI8xp0JUoZl+WOQmo
-som8LrJ9uPVzDrXAABcq/Pw6aIVXmgMFdnyp2j5UlCmbLAHlUX2ARRzLHMrdfN3j
-efLrVgvrBpTdP48nfJreaoK89YwKBioV22DAcYsRB3iPS41eD7p6wOcF2QMF3c35
-+NvhIkTujDciHRIZrrKr3vIjjcB5S6IPP59TOtyTw5T+dVhUagc7JZ3LysogD3OH
-zblf2h3Gkd+qM4lg1+K8tzZOJMEo1A3VPi0lbuMqDbPtnDx1mIvuVQEJGEuBAA6V
-7uCizawlLrcYaYWtLsNjGuh+u6EMLcljdmRjLgcS6r0F1zgZnAVNvo5TA7nhGiLx
-cfYemxi+xkDckH2o3v5z4IczGfLuw04gAndaVkinyjOs6B4PY2e0/1h7mytveQ1r
-Rv9xMjzFtvT07sFIToX6pKDNQ7PkSKVJnlm092ewreXcdzgiXMPNowUlzsofWaY6
-GULLJvNKmwHDmdzEmONroyuh8oO5hyFJOTxPYi+aKO3YizEw4tY6TrkcP3eNF1Oq
-0AxPzE0GiCSMnya1s5xgXwWWqZgIOhqcUHw1kSo7A/3iYEqjrN2B4cufvauRUsXw
-BMlrrI4NSc9UAuskBHwxB3LvqMdrarIvyHltJCDsJMpuAKqCEqaCYZvJq68homHU
-M/dLq7jbLR0P3H0RdD4j
-=1GUz
+iQIcBAEBCAAGBQJVN6g6AAoJEPGu1DbS6WIAGqwP/A4A3MQP3jzruSdXYlQGD5DS
+kROLz32TNMNV4Bwp2DuaOGRxHKa4DweoDWThFCE9hIbhVgAt53GsEzcE6RJ8bDkv
+2VnDTiGNNJhwo9K+mL0nO4eP9Up2cntaYGgYyomlXfNz4LjpNCqUHQx94eLdCzEB
+ZwkYksivpFV6bDgTXoYQYV0zN3g+9dCWKukrRFs3DMuhgkbB6wBj00zisS6QO2uX
+nqsAzAE3/LqAjjvzgz6buGQeygu+EniBNxIZUDwOkJ+D+1gziZpZzfaqw/YjhLgX
++r6msl5mB0DRnLCxUbNt4trjZSuEkqwvN4bPOfTogJBx4NE2Y8YMsiiyfwtSyYv2
+h6uRyTrx3k/3QC/9c/ugS8dRjnj6H49JIOCKXl+cvOmNZ2uBySdkgLVIUXoisZRi
+d8QqNJUXpW/OSkh4vrfjHjTgFP3ahwgTb1ZYQh9lIf+JGVtCDtV2sx/35Orr72IG
+KIVDouZ+RaCOL8n/SpKO4HknvBnUClsVpfwWk4bYpE26A5vW0tkWpg4zelm1/bJa
+KvGuhKmT6MyrZuFeYGBcqD1EDCXWxnlOwg2l/Y8GGkcAlVO8HrtGI3CzEFlcUiIv
+LAY26Ct0Byz9qDaEtPSP1VwzEY3/Wqx6XTzGcWSC+crbDkQRI1fjQDtdQjz1WhAL
+AzmV/7+WXSkh1RKrZHxp
+=aY8s
 -----END PGP SIGNATURE-----
