@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.413 2015/04/13 08:24:29 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.414 2015/04/22 13:55:04 vapier Exp $
+
+  22 Apr 2015; Mike Frysinger <vapier@gentoo.org> cairo-1.10.2-r3.ebuild:
+  Only add -finline-limit=1200 to CFLAGS when the compiler supports it to fix
+  building with non-gcc (like clang).
 
   13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cairo-1.12.18-r1.ebuild:
   Stable for alpha, wrt bug #540676
